# easy-requests

./: .env.example  README.md  playground.py  pyproject.toml
.github/workflows/: python-publish.yml
easy_requests/: __main__.py  cache.py  connections.py
python_requests/: __init__.py  __main__.py  cache.py  connections.py
