[project]
name = "python-requests"
dependencies = []
dynamic = []
authors = []
description = "A Python library for simplified HTTP requests, featuring rate limiting, browser-like headers, and automatic retries. Built on the official `requests` library for reliability."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = [
    "LICENSE"
]

[project.scripts]
python-requests = "python_requests.__main__:cli"

[project.urls]
Homepage = "/Hazel/python-requests"
Issues = "REPO_LINKissues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
directory = "dist"

[tool.hatch.build.targets.sdist]
include = ["python_requests/*.py"]

[tool.hatch.build.targets.wheel]
packages = ["python_requests"]

[tool.hatch.version]
path = "python_requests/__about__.py"
